src/main/java/com/example/keepstock/error/exception/ImageNotFoundException.java
package com.example.keepstock.error.exception;

public class ImageNotFoundException extends RuntimeException {
    public ImageNotFoundException(String message) {
        super(message);
    }
}